syntax = "proto3";

package tcp_over_grpc;

service TcpOverGrpcService {
    rpc WrapTcpStream(stream IngressMessage) returns (stream EgressMessage) {}
}

message IngressMessage {
    bytes data = 1;
}

message EgressMessage {
    bytes data = 1;
}
